# hunger-go

./: database.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
app/: Dockerfile  database.py  main.py  models.py  requirements.txt  schemas.py
app/routers/: auth_routes.py  base.py  core_router.py  orders_router.py  shop_router.py
routers/: auth_routes.py  base.py  core_router.py  orders_router.py  shop_routes.py
